[metadata]
name = ErrorSearcher
license = MIT
license_file = LICENSE
version = 1.0.2
author = Sachin
author_email = sachin1122621003@gmail.com
description = ErrorSearcher help to search error on webbrowser
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, error,ErrorSearcher, file, python3
platforms = any
url = https://github.com/sachin11226/ErrorSearcher
download_url = https://github.com/sachin11226/ErrorSearcher/archive/1.0.2.tar.gz
project_urls =
    Bug Tracker = https://github.com/sachin11226/ErrorSearcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
